@@ -1,6 +1,7 @@
 gscan2pdf (1.0.5) unstable; urgency=low
 
   * New upstream release
+    Closes: #670640 (Can't call method get_cmdline)
 
  -- Jeffrey Ratcliffe <jjr@debian.org>  Wed, 11 Apr 2012 22:37:52 +0200
 
