@@ -6,6 +6,8 @@
 * Pad scans which have less data than their headers announce with blanks
   Closes bug 3480247 (No image from HP6500A ADF)
 * Add profiles to libsane-perl frontend
+* Fix unpaper when used as part of scan process
+  Closes Debian bug #670640 (Can't call method get_cmdline)
 
 
 1.0.4 (11.04.2012):
